--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: "RenPy Lint"
+name: "RenPy Build"
 author: 'PaxlavaGames'
-description: "GitHub action to lint project on RenPy"
+description: "GitHub action to build RenPy projects"
 inputs:
   path:
     description: "RenPy project path"
@@ -12,5 +12,5 @@ runs:
   args:
     - ${{ inputs.path }}
 branding:
-  color: 'green'
-  icon: 'check-square'
+  color: 'blue'
+  icon: 'box'
