--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -12,10 +12,10 @@ jobs:
       uses: PaxlavaGames/renpy-install@v0.1.2
       with:
         version: "8.1.3"
-    - name: Check SDK
-      run: |
-        ls
-    - name: Lint RenPy
-      uses: PaxlavaGames/renpy-lint@main
+    - name: Build RenPy
+      uses: PaxlavaGames/renpy-build@main
       with:
         path: "./testing"
+    - name: Check results
+      run: |
+        ls
