--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -6,12 +6,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        renpy-version: [ "8.1.3", "8.2.0" ]
     steps:
     - uses: actions/checkout@v3
-    - name: Install RenPy
-      uses: PaxlavaGames/renpy-install@v0.1.2
+    - name: Install RenPy ${{ matrix.renpy-version }}
+      uses: PaxlavaGames/renpy-install@v0.2.0
       with:
-        version: "8.1.3"
+        version: ${{ matrix.renpy-version }}
     - name: Build RenPy
       uses: PaxlavaGames/renpy-build@main
       with:
