add destination folder

--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install RenPy ${{ matrix.renpy-version }}
-      uses: PaxlavaGames/renpy-install@v0.2.0
+      uses: PaxlavaGames/renpy-install@v0.3.0
       with:
         version: ${{ matrix.renpy-version }}
     - name: Build RenPy
@@ -21,5 +21,7 @@ jobs:
         path: "./testing"
     - name: Check results
       run: |
+        echo "root folder..."
         ls
-        ls ./FunAdventureinTurkey-1.0-dists
+        echo "build folder..."
+        ls ./build
